welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:6: error: not found: value num
		if (num(n)==lookingFor)
                    ^