welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = 
{
	var o: Int=0
	for (n <- 1 to nums.length-1)
	{
		if (num(n)==lookingFor)
		{
			o=o+1
		}
	}
	return o
}
